[package]
name = "happyeyeballs"
version = "0.1.0"
authors = ["conblem <mail@conblem.me>"]
edition = "2018"

[dependencies]
tokio = { version = "1", default-features = false, features = ["net", "time", "macros"] }

[dev-dependencies]
tokio = { version = "1", default-features = false, features = ["rt", "io-util"] }

